<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DozcalDroid</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="add_text">Add New</string>
    <string name="left_arrow">\u00ab</string>
    <string name="right_arrow">\u00bb</string>
    <string name="text_daily">D</string>
    <string name="text_weekly">\u2166</string>
    <string name="text_monthly">+1F4C5;</string>
    <string name="text_settings">\u2699</string>
    <string name="sunriseset_text">Sunrise/Sunset</string>
    <string name="nosunriseset_text">No Solar</string>
    <string name="moonphase_text">Moon Phases</string>
    <string name="nomoonphase_text">No Phases</string>
    <string name="astron_opts_title">Astronomy Options</string>
    <string name="astron_opts_exp">Check the boxes for the items you wish to be displayed.  For no change, simply do not check any boxes.</string>
    <string name="save_settings_button">Save Settings</string>
    <string name="title_activity_activity_settings_setter">DozcalDroid Settings</string>
    <string name="title_activity_addnew_activity">DozcalDroid:  Add New Event</string>
    <string name="event_name_label">Event Name</string>
    <string name="date_field_label">Date</string>
    <string name="every">Every</string>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="date_field_blank_label">Leave blank if using the below</string>
    <string name="intermittent_ord_label">On every</string>
    <string name="first">1st</string>
    <string name="second">2nd</string>
    <string name="third">3rd</string>
    <string name="fourth">4th</string>
    <string name="last">Last</string>
    <string name="time_field_label">Time</string>
    <string name="event_type_label">Event Type and Rank</string>
    <string name="event_type_blank_label">Enter rank and type together, with no spaces.</string>
    <string name="except_field_label">Exceptions</string>
    <string name="time_field_blank_label">Enter in the form HH;BB.  If the event is all day, leave blank.</string>
    <string name="except_field_blank_label">Dates which meet the criteria above, but on which the event does not occur.</string>
    <string name="new_submit">Enter</string>
    <string name="jan">Jan</string>
    <string name="feb">Feb</string>
    <string name="mar">Mar</string>
    <string name="apr">Apr</string>
    <string name="may">May</string>
    <string name="jun">Jun</string>
    <string name="jul">Jul</string>
    <string name="aug">Aug</string>
    <string name="sep">Sep</string>
    <string name="oct">Oct</string>
    <string name="nov">Nov</string>
    <string name="dec">Dec</string>
    <string name="in">in</string>
    <string name="end_range_hint">End Range</string>
    <string name="start_range_hint">Start Range</string>
    <string name="event_name_hint">Event Name</string>
    <string name="time_hint">Time of Event</string>
    <string name="event_type_hint">Type of Event</string>
    <string name="range_symbol">-</string>
    <string name="date_form_label">Date Format</string>
    <string name="date_form_hint">EEE, dd MMM yyyy</string>
    <string name="date_form_exp">The format in which you wish dates to appear.  "y" = "year"; "M" = "month"; "d" = "day"; "E" = "weekday".  Default is "EEE, dd MMM yyyy", giving the form "Wed, 15 Jul 11E9".  Less than two month digits will give a numeric month (e.g., "02" rather than "Feb"); more will give the month name with more letters (e.g., "MMMM" yields "Febr", while "MMM" yields "Feb").</string>
    <string-array name="dow_names">
        <item>No Change</item>
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    <string name="first_dow_title">First Day of Week</string>
    <string name="first_dow_exp">The weekday which starts the week; default is Sunday.</string>
    <string name="error_title">Error</string>
    <string name="date_error">The date field is formatted incorrectly; please enter the date in one of the following formats:\n\t yyyy-MM-dd\n\t yyyy-MMM-dd\n\t yyyy/MM/dd\n\t yyyy/MMM/dd\n\t dd MMM yyyy\n\t dd MMMM yyyy\n\t MMM dd, yyyy\n\t MMMM dd, yyyy</string>
    <string name="date_end_error">The end of your date range is formatted incorrectly; please enter the date in one of the following formats:\n\t yyyy-MM-dd\n\t yyyy-MMM-dd\n\t yyyy/MM/dd\n\t yyyy/MMM/dd\n\t dd MMM yyyy\n\t dd MMMM yyyy\n\t MMM dd, yyyy\n\t MMMM dd, yyyy</string>
    <string name="date_excp_error">The first date exception field is formatted incorrectly; please enter the date in one of the following formats:\n\t yyyy-MM-dd\n\t yyyy-MMM-dd\n\t yyyy/MM/dd\n\t yyyy/MMM/dd\n\t dd MMM yyyy\n\t dd MMMM yyyy\n\t MMM dd, yyyy\n\t MMMM dd, yyyy</string>
    <string name="date_end_excp_error">The end of your exception date range is formatted incorrectly; please enter the date in one of the following formats:\n\t yyyy-MM-dd\n\t yyyy-MMM-dd\n\t yyyy/MM/dd\n\t yyyy/MMM/dd\n\t dd MMM yyyy\n\t dd MMMM yyyy\n\t MMM dd, yyyy\n\t MMMM dd, yyyy</string>

</resources>
