<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80000000"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/unit_wrapper"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="0dp"
        android:weightSum="1.0" >

        <Button
            android:id="@+id/button_daily"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16pt"
            android:layout_marginRight="1dp"
            android:layout_marginTop="0dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:layout_weight="0.25"
            android:gravity="center"
            android:text="@string/text_daily"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/button_weekly"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:textSize="16pt"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:layout_weight="0.25"
            android:text="@string/text_weekly"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/button_monthly"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16pt"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginTop="0dp"
            android:layout_weight="0.25"
            android:text="@string/text_monthly"
            android:textColor="#FFFFFF" />
        <Button
            android:id="@+id/button_settings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16pt"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="0dp"
            android:layout_weight="0.25"
            android:background="#FF737CA1"
            android:text="@string/text_settings"
            android:textColor="#FFFFFF" />
    </LinearLayout>
    
        <LinearLayout
            android:id="@+id/curr_unit_arrow_wrapper"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:orientation="horizontal"
            android:weightSum="1.0" >

            <Button
                android:id="@+id/left_arrow"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:layout_weight="0.15"
                android:textSize="14pt"
                android:gravity="center"
                android:background="#FF737CA1"
                android:text="@string/left_arrow"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/curr_dateunit"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginTop="1dp"
                android:layout_weight="0.7"
                android:textSize="8pt"
                android:gravity="center"
                android:textColor="#000000"
                android:background="#FFFFFFFF"
                android:textIsSelectable="true" />

            <Button
                android:id="@+id/right_arrow"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:layout_weight="0.15"
                android:textSize="14pt"
                android:gravity="center"
                android:background="#FF737CA1"
                android:text="@string/right_arrow"
                android:textColor="#FFFFFF" />
        </LinearLayout>
    
    <LinearLayout
        android:id="@+id/content_button_box"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="1dp"
        android:weightSum="1.0"
        android:orientation="vertical">
    <ProgressBar android:id="@+id/progress"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/dateunit_content"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.85"
        android:fillViewport="true"
        android:scrollbars="vertical"
        android:layout_marginTop="1dp"
        android:background="#FAFAFA"
        android:gravity="left"
        android:textColor="#000000"
        android:textIsSelectable="true" />
    <Button
        android:id="@+id/addnew"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/add_text"
        android:textColor="#FFFFFF"
        android:background="#FF800000"
        android:textSize="14pt"
        android:layout_marginTop="1dp"
        android:layout_weight="0.15" />
    </LinearLayout>

</LinearLayout>
